# electronic-simulator

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  arquitectura.txt  main.cpp  renderer.cpp  renderer.h  ui.cpp  ui.h
simulator/demoWidgets/: DemoWidgets.cpp
simulator/ui/: ui.cpp  ui.h
simulator/widgets/: button.h  label.h  textField.h
